--- a/templates/components/listItem.html.twig
+++ b/templates/components/listItem.html.twig
@@ -1,4 +1,4 @@
-<a {{ route is not null ? "href=#{path(route, { slug })}"}}>
+<a {{ route is not null ? "href=#{path(route, {}|merge(slug))}"}}>
     <div class="flex h-12 items-center gap-8 rounded-full py-3 px-6 hover:bg-base-200">
         <div class="flex gap-4 font-medium" aria-label="{{ "common.position"|trans({ position: index }) }}">
             {% include "icon/star.html.twig" %}
