--- a/templates/components/global_search.html.twig
+++ b/templates/components/global_search.html.twig
@@ -21,10 +21,8 @@
                         <div class="m-2">
                             {% for hit in config.results.hits %}
                                 {% set formatted = hit._formatted %}
-
                                 <div class="mb-2 flex flex-col">
-                                    <a href="{{ path(config.route, { (config.routeParam): formatted[config.slugProperty] }) }}" class="link-primary link-hover link text-lg transition-all max-w-fit">{{ formatted[config.nameProperty]|sanitize_html("app.highlight_sanitizer") }}</a>
-
+                                    <a href="{{ path(config.route, {}|merge(config.routeParam|reduce((acc, curr) => acc|merge({ (curr): formatted[config.slugProperty[curr]] }), {}))) }}" class="link-primary link-hover link text-lg transition-all max-w-fit">{{ formatted[config.nameProperty]|sanitize_html("app.highlight_sanitizer") }}</a>
                                     <p>
                                         {{ (formatted[config.descProperty] ?? "")|sanitize_html("app.highlight_sanitizer") }}
                                     </p>
