--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -37,8 +37,7 @@
                         <div class="flex flex-col gap-6">
                             {% for hit in search.hits %}
                                 {% set formatted = hit._formatted %}
-
-                                <a href="{{ path(attributes.route, { (attributes.routeParam): formatted[attributes.slugProperty] }) }}">
+                                <a href="{{ path(attributes.route, {}|merge(attributes.routeParam|reduce((acc, curr) => acc|merge({ (curr): formatted[attributes.slugProperty[curr]] }), {}))) }}">
                                     <div class="card bg-base-200 shadow-lg transition-all hover:-translate-y-1 hover:bg-base-300 hover:shadow-xl">
                                         <div class="card-body">
                                             <h2 class="card-title gap-0">
