--- a/templates/stack/index.html.twig
+++ b/templates/stack/index.html.twig
@@ -13,13 +13,39 @@
 {% endblock %}
 
 {% block main_body %}
+<turbo-frame id="table_crud" data-turbo-action="advance">
+    <span class="flex justify-end mb-3">
+        {{ component(
+            "button",
+            {
+                icon: "add-circle",
+                square: true,
+                href: path("app_tech_choose_type"),
+                ariaLabel: ("icon.add-circle")|trans,
+                centered: false
+            })
+        }}
+    </span>
     <div class="card bg-base-100">
+        <span class="m-3">
+            {{ knp_pagination_sortable(pagination, 
+                'common.created_at'|trans, 
+                's.createdAt', 
+                {},
+                {},
+                'knp_custom/paginator_sortable.html.twig') 
+            }}
+        </span>
         <div class="card-body">
-            {% for stack in stacks %}
+            {% for stack in pagination %}
                 {{ component("listItem", { item: stack }) }}
             {% else %}
                 {{ "common.no_result"|trans }}
             {% endfor %}
         </div>
     </div>
+    <div class="flex items-center justify-center mt-3">
+        {{ knp_pagination_render(pagination, 'knp_custom/paginator.html.twig') }}
+    </div>
+</turbo-frame>
 {% endblock %}
