--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,12 +83,12 @@
 
                             <div class="lg:flex gap-2 hidden">
                                 {{ component('button', {
-                                    content: 'Stacks',
+                                    content: "stacks"|trans,
                                     href: path('app_stack_index')
                                 }) }}
 
                                 {{ component('button', {
-                                    content: 'Techs',
+                                    content: "techs"|trans,
                                     href: path('app_tech_index')
                                 }) }}
                             </div>
