--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -14,7 +14,7 @@
 
 {% block main_body %}
     <div class="card bg-base-100 shadow-xl md:card-side">
-        <figure class="min-w-[12.5rem]">
+        <figure class="{{ not profile.picture.fileName|default(false) ? "min-w-[12.5rem]" }}">
             {{ component("avatar", { user: profile.user, small: false, class: "mask mask-squircle md:mask-square" }) }}
         </figure>
         <div class="card-body">
