--- a/assets/styles/shared/_tom_select.scss
+++ b/assets/styles/shared/_tom_select.scss
@@ -1,9 +1,9 @@
 .dropdown-active .ts-control {
-    @apply rounded-lg;
+    @apply rounded-lg #{!important};
 }
 
 .full .ts-control {
-    background-color: unset;
+    background-color: unset !important;
 }
 
 .ts {
@@ -12,30 +12,30 @@
             .ts {
                 &-control {
                     @apply bg-base-100 text-base-content shadow-none dark:border-white dark:border-opacity-20 #{!important};
-                    border: 1px solid #d0d0d0;
+                    border: 1px solid #d0d0d0 !important;
 
-                    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
-                    background-position: right 0.5rem center;
-                    background-repeat: no-repeat;
-                    background-size: 1.5em;
+                    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e") !important;
+                    background-position: right 0.5rem center !important;
+                    background-repeat: no-repeat !important;
+                    background-size: 1.5em !important;
                 }
 
                 &-dropdown {
-                    @apply border-none bg-base-100 text-base-content;
+                    @apply border-none bg-base-100 text-base-content #{!important};
                 }
 
                 &-dropdown-content {
                     [data-selectable].option {
                         &.active {
-                            @apply bg-base-200 text-base-content;
+                            @apply bg-base-200 text-base-content #{!important};
                         }
 
                         &:first-child {
-                            @apply rounded-t-lg;
+                            @apply rounded-t-lg #{!important};
                         }
 
                         &:last-child {
-                            @apply rounded-b-lg;
+                            @apply rounded-b-lg #{!important};
                         }
                     }
                 }
@@ -49,43 +49,43 @@
 
         &.plugin-remove_button {
             &:not(.rtl) .item .remove {
-                @apply border-l-0;
+                @apply border-l-0 #{!important};
             }
 
             .item .remove:hover {
-                @apply bg-transparent;
+                @apply bg-transparent #{!important};
             }
         }
     }
 
     &-control {
-        @apply rounded-lg bg-base-100 py-2 pl-3 pr-6 text-base dark:border-white dark:border-opacity-20;
+        @apply rounded-lg bg-base-100 py-2 pl-3 pr-6 text-base dark:border-white dark:border-opacity-20 #{!important};
 
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
-        background-position: right 0.5rem center;
-        background-repeat: no-repeat;
-        background-size: 1.5em;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e") !important;
+        background-position: right 0.5rem center !important;
+        background-repeat: no-repeat !important;
+        background-size: 1.5em !important;
 
         input {
-            @apply text-base-content;
+            @apply text-base-content #{!important};
         }
     }
 
     &-dropdown {
-        @apply rounded-md border-none bg-base-100 text-base text-base-content;
+        @apply rounded-md border-none bg-base-100 text-base text-base-content #{!important};
 
         &[data-selectable].option {
             &:first-child {
-                @apply rounded-t-lg;
+                @apply rounded-t-lg #{!important};
             }
 
             &:last-child {
-                @apply rounded-b-lg;
+                @apply rounded-b-lg #{!important};
             }
         }
 
         .active {
-            @apply bg-base-200 text-base-content;
+            @apply bg-base-200 text-base-content #{!important};
         }
     }
 }
