--- a/templates/stack/show.html.twig
+++ b/templates/stack/show.html.twig
@@ -25,7 +25,7 @@
                                 class: "rounded-full",
                                 filter: "avatar_small",
                                 height: 32,
-                                src: vich_uploader_asset(stack.profile.picture, "file"),
+                                src: stack.profile.picture ? vich_uploader_asset(stack.profile.picture, "file") : null,
                                 width: 32
                             }) }}
                             {{ stack.profile.username }}
