--- a/templates/form/theme.html.twig
+++ b/templates/form/theme.html.twig
@@ -58,7 +58,7 @@
 {# Choice #}
 
 {%- block choice_widget -%}
-    {%- set widget_class = widget_class|default('max-w-xs') -%}
+    {%- set widget_class = widget_class|default('') -%}
     {% if expanded %}
         {{- block('choice_widget_expanded') -}}
     {% else %}
@@ -81,7 +81,7 @@
 {# File #}
 
 {% block file_widget %}
-    {%- set widget_class = widget_class|default('file-input file-input-bordered file-input-primary w-full max-w-xs') -%}
+    {%- set widget_class = widget_class|default('file-input file-input-bordered file-input-primary w-full') -%}
     {{- block('form_widget') -}}
 {% endblock %}
 
@@ -95,12 +95,12 @@
 {# Text #}
 
 {%- block email_widget -%}
-    {%- set widget_class = widget_class|default('input input-bordered w-full max-w-xs') -%}
+    {%- set widget_class = widget_class|default('input input-bordered w-full') -%}
     {{- parent() -}}
 {%- endblock email_widget -%}
 
 {%- block password_widget -%}
-    {%- set widget_class = widget_class|default('input input-bordered w-full max-w-xs') -%}
+    {%- set widget_class = widget_class|default('input input-bordered w-full') -%}
     {%- set type = type|default('password') -%}
     {%- set attr = attr|merge({ "data-password-visibility-target": "input", spellcheck: "false" }) -%}
     <div class="input-group" {{ stimulus_controller("password-visibility") }}>
@@ -113,12 +113,12 @@
 {%- endblock password_widget -%}
 
 {%- block text_widget -%}
-    {%- set widget_class = widget_class|default('input input-bordered w-full max-w-xs') -%}
+    {%- set widget_class = widget_class|default('input input-bordered w-full') -%}
     {{ block('form_widget') }}
 {%- endblock text_widget -%}
 
 {%- block url_widget -%}
-    {%- set widget_class = widget_class|default('input input-bordered w-full max-w-xs') -%}
+    {%- set widget_class = widget_class|default('input input-bordered w-full') -%}
     {{ block('form_widget') }}
 {%- endblock url_widget -%}
 
