--- a/templates/admin/stack/index.html.twig
+++ b/templates/admin/stack/index.html.twig
@@ -18,7 +18,7 @@
                         icon: "add-circle",
                         square: true,
                         href: path("admin_stack_new"),
-                        ariaLabel: ("icon.add-circle")|trans,
+                        ariaLabel: ("icon.add_circle")|trans,
                         centered: false
                     })
                 }}
