--- a/templates/stack/_edit_content.html.twig
+++ b/templates/stack/_edit_content.html.twig
@@ -1,8 +1,14 @@
 {% include "stack/_form.html.twig" with { form, button_label: ("common." ~ (isEditing ? 'edit' : 'add'))|trans } only %}
 
 <div class="flex w-full items-center justify-center gap-6">
-    {{ component("button", { content: "common.back_to_list"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("app_stack_index") }) }}
-    {% if is_granted(constant("App\\Security\\Voter\\StackVoter::DELETE"), stack) and isEditing %}
-        {% include "stack/_delete_form.html.twig" with { stack } only %}
-    {% endif %}
+    <div class="btn-group" role="group">
+        {{ component("button", { content: "common.back_to_list"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("app_stack_index") }) }}
+        {{ component("button", { content: "page.edit_stack.see"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("app_stack_show", { slug_stack: stack.slug, slug_profile: stack.profile.slug }) }) }}
+    </div>
 </div>
+
+{% if is_granted(constant("App\\Security\\Voter\\StackVoter::DELETE"), stack) and isEditing %}
+    <div class="flex w-full items-center justify-center gap-6">
+        {% include "stack/_delete_form.html.twig" with { stack } only %}
+    </div>
+{% endif %}
