--- a/templates/tech/_edit_content.html.twig
+++ b/templates/tech/_edit_content.html.twig
@@ -1,8 +1,14 @@
 {% include "tech/_form.html.twig" with { form, button_label: ("common." ~ (isEditing ? 'edit' : 'new'))|trans } only %}
 
 <div class="flex w-full items-center justify-center gap-6">
-    {{ component("button", { content: "common.back_to_list"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("app_tech_index") }) }}
-    {% if isEditing %}
-        {% include "tech/_delete_form.html.twig" with { tech } only %}
-    {% endif %}
+    <div class="btn-group" role="group">
+        {{ component("button", { content: "common.back_to_list"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("app_tech_index") }) }}
+        {{ component("button", { content: "page.edit_tech.see"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("app_tech_show", { slug: tech.slug }) }) }}
+    </div>
 </div>
+
+{% if isEditing %}
+    <div class="flex w-full items-center justify-center gap-6">
+        {% include "tech/_delete_form.html.twig" with { tech } only %}
+    </div>
+{% endif %}
