--- a/templates/stack/_edit_content.html.twig
+++ b/templates/stack/_edit_content.html.twig
@@ -3,7 +3,9 @@
 <div class="flex w-full items-center justify-center gap-6">
     <div class="btn-group" role="group">
         {{ component("button", { content: "common.back_to_list"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("app_stack_index") }) }}
-        {{ component("button", { content: "page.edit_stack.see"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("app_stack_show", { slug_stack: stack.slug, slug_profile: stack.profile.slug }) }) }}
+        {% if isEditing %}
+            {{ component("button", { content: "page.edit_stack.see"|trans, class: "btn-outline", variant: "info", centered: false, ghost: true, href: path("app_stack_show", { slug_stack: stack.slug, slug_profile: stack.profile.slug }) }) }}
+        {% endif %}
     </div>
 </div>
 
