Fix: Small fixes

--- a/templates/components/shortList.html.twig
+++ b/templates/components/shortList.html.twig
@@ -1,5 +1,5 @@
 <div class="card bg-base-100 shadow-xl">
-    <div class="card-title justify-between p-8 pb-0">
+    <div class="card-title justify-between p-8 pb-0 flex-col sm:flex-row">
         <div class="capitalize">
             {% block header %}
 
