--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,9 @@
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="{% block description %}{{ 'common.description'|trans }}{% endblock %}">
+        {% block icon %}
+            <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}">
+        {% endblock %}
         {% block meta %}{% endblock %}
         {% block stylesheets %}
             {{ encore_entry_link_tags("app") }}
