--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -158,7 +158,7 @@
                     <footer class="footer bg-base-300 p-10 text-base-content">
                         <div class="flex items-center">
                             <svg class="h-6 w-6 lg:h-10 lg:w-10" version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200.000000 200.000000" preserveAspectRatio="xMidYMid meet">
-                                <g transform="translate(0.000000,200.000000) scale(0.100000,-0.100000)" fill="#ffffff" stroke="none">
+                                <g transform="translate(0.000000,200.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
                                     <path d="M694 1891 c-17 -5 -40 -14 -51 -22 -11 -8 -118 -128 -237 -268 -147
                             -174 -216 -262 -216 -278 0 -36 40 -54 213 -96 l156 -39 -49 -59 c-30 -36 -50
                             -70 -50 -85 0 -32 43 -58 123 -74 34 -7 65 -15 70 -17 4 -2 -9 -25 -29 -49
