--- a/templates/stack/index.html.twig
+++ b/templates/stack/index.html.twig
@@ -1,15 +1,15 @@
 {% extends "layout.html.twig" %}
 
 {% block title %}
-
+    {{ "page.stacks.title"|trans }}
 {% endblock %}
 
 {% block description %}
-
+    {{ "page.stacks.description"|trans }}
 {% endblock %}
 
 {% block main_title %}
-
+    {{ "page.stacks.title"|trans }}
 {% endblock %}
 
 {% block main_body %}
