--- a/templates/tech/index.html.twig
+++ b/templates/tech/index.html.twig
@@ -1,15 +1,15 @@
 {% extends "layout.html.twig" %}
 
 {% block title %}
-
+    {{ "page.techs.title"|trans }}
 {% endblock %}
 
 {% block description %}
-
+    {{ "page.techs.description"|trans }}
 {% endblock %}
 
 {% block main_title %}
-
+    {{ "page.techs.title"|trans }}
 {% endblock %}
 
 {% block main_body %}
