--- a/templates/components/button.html.twig
+++ b/templates/components/button.html.twig
@@ -15,6 +15,9 @@
     {% if id %}id="{{ id }}"{% endif %}
     {% if disabled %}disabled{% endif %}
     {% if ariaLabel %}aria-label="{{ ariaLabel }}"{% endif %}
+    {% for key, prop in additionalProps %}
+        {{ key }}="{{ prop }}"
+    {% endfor %}
 >
     {% if icon or content %}
         {% if icon and iconPosition == "left" %}
