--- a/templates/stack/edit.html.twig
+++ b/templates/stack/edit.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block main_body %}
-    <div id="stack-app-form" class="mx-auto flex max-w-4xl flex-col gap-4">
+    <div id="stack-app-form" class="mx-auto flex w-full max-w-2xl flex-col gap-4">
         {% include "stack/_edit_content.html.twig" %}
     </div>
 {% endblock %}
